logs now route to /dev/stderr and /dev/stdout

--- a/conf/php-fpm/www.conf
+++ b/conf/php-fpm/www.conf
@@ -1,3 +1,6 @@
+[global]
+error_log = /dev/stderr
+
 ; Start a new pool named 'www'.
 [www]
 
@@ -153,7 +156,7 @@ pm.max_spare_servers = 35
 ; The log file for slow requests
 ; Default Value: not set
 ; Note: slowlog is mandatory if request_slowlog_timeout is set
-slowlog = /var/log/php-fpm/www-slow.log
+slowlog = /dev/stderr
 
 ; Set open file descriptor rlimit.
 ; Default Value: system defined value
@@ -179,7 +182,7 @@ slowlog = /var/log/php-fpm/www-slow.log
 ; Redirect worker stdout and stderr into main error log. If not set, stdout and
 ; stderr will be redirected to /dev/null according to FastCGI specs.
 ; Default Value: no
-;catch_workers_output = yes
+catch_workers_output = yes
 
 ; Limits the extensions of the main script FPM will allow to parse. This can
 ; prevent configuration mistakes on the web server side. You should only limit
@@ -216,10 +219,13 @@ slowlog = /var/log/php-fpm/www-slow.log
 ;                specified at startup with the -d argument
 ;php_admin_value[sendmail_path] = /usr/sbin/sendmail -t -i -f www@my.domain.com
 php_flag[display_errors] = on
-php_admin_value[error_log] = /var/log/php-fpm/www-error.log
+php_admin_value[error_log] = /dev/stderr
 php_admin_flag[log_errors] = on
 php_admin_value[memory_limit] = 128M
 
 ; Set session path to a directory owned by process user
 php_value[session.save_handler] = files
 php_value[session.save_path] = /var/lib/php/session
+
+access.log = /dev/stdout
+access.format = "%t \"%m %r%Q%q\" %s %{mili}dms %{kilo}Mkb %C%%"
