--- a/conf/supervisor/supervisord.conf
+++ b/conf/supervisor/supervisord.conf
@@ -9,3 +9,12 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
+
+
+; [program:mailcatcher]
+; command=/usr/local/rvm/gems/ruby-2.3.0/bin/mailcatcher --ip=0.0.0.0
+; user = root
+; stdout_logfile=/dev/stdout
+; stdout_logfile_maxbytes=0
+; stderr_logfile=/dev/stderr
+; stderr_logfile_maxbytes=0
