--- a/conf/php-fpm/php.ini
+++ b/conf/php-fpm/php.ini
@@ -956,9 +956,9 @@ pdo_mysql.default_socket=
 [mail function]
 ; For Win32 only.
 ; http://php.net/smtp
-SMTP = localhost
+SMTP = mailcatcher
 ; http://php.net/smtp-port
-smtp_port = 25
+smtp_port = 1025
 
 ; For Win32 only.
 ; http://php.net/sendmail-from
