--- a/conf/php-fpm/www.conf
+++ b/conf/php-fpm/www.conf
@@ -1,5 +1,5 @@
 [global]
-error_log = /dev/stderr
+error_log = /var/log/php-fpm/fpm-error.log
 
 ; Start a new pool named 'www'.
 [www]
@@ -219,7 +219,7 @@ catch_workers_output = yes
 ;                specified at startup with the -d argument
 ;php_admin_value[sendmail_path] = /usr/sbin/sendmail -t -i -f www@my.domain.com
 php_flag[display_errors] = on
-php_admin_value[error_log] = /dev/stderr
+php_admin_value[error_log] = /var/log/fpm-php.www.log
 php_admin_flag[log_errors] = on
 php_admin_value[memory_limit] = 128M
 
@@ -227,5 +227,5 @@ php_admin_value[memory_limit] = 128M
 php_value[session.save_handler] = files
 php_value[session.save_path] = /var/lib/php/session
 
-access.log = /dev/stdout
+access.log = /var/log/php-fpm/access.log
 access.format = "%t \"%m %r%Q%q\" %s %{mili}dms %{kilo}Mkb %C%%"
