- Upgrade PHP 7.2.8 - Added Composer - added "php" user - can be used to run Composer

--- a/7.2.8/Dockerfile
+++ b/7.2.8/Dockerfile
@@ -12,8 +12,10 @@ MAINTAINER Randy Lowe <randy@weblogix.ca>
 # normal updates
 RUN yum -y update
 
+RUN adduser php
+
 # install tools
-RUN yum -y install epel-release initscripts nano bind-utils net-tools ssmtp
+RUN yum -y install epel-release initscripts nano bind-utils net-tools ssmtp unzip
 
 # Install PHP 7
 RUN \
@@ -44,8 +46,9 @@ COPY conf/php-fpm/www.conf /etc/php-fpm.d/www.conf
 COPY conf/php-fpm/php.ini /etc/php.ini
 
 # Composer
-RUN cd / && curl -o https://getcomposer.org/composer.phar
+RUN cd / && curl -O https://getcomposer.org/composer.phar
 RUN mv /composer.phar /usr/local/bin/composer
+RUN chmod 755 /usr/local/bin/composer
 
 # Copy supervisor configuration file
 RUN yum -y install supervisor
